# 11.1-Switches-and-generators

./: README.md  chain.md  enumerate(iterable, start=0).md  filter.md  html.md  lambda.md  main.py  map().md  ord()  ord.md  pyproject.toml  task_1.py  task_2.py  генераторы в  одну строку.md  замена(данных, подстановка) мок.py  условия.py
Генераторные выражения/: readme.md  задача.py  задача.txt  код в одну строку.py
Генераторы списков/: readme.md  задача.md  задача.py  тестирование
Инициализация, приостановка и завершение генерации/: readme.md  задача.py
Конвейерная разработка/: README.md
Конвейерная разработка/задачи/: task_1.py
Конвейерная разработка/описание задач/: ЗАДАЧА 1.md  ЗАДАЧА_2.md
Обработка исключений. Блоки try except/: readme.md
Процессы итерации/: readme.md
Тестирование генераторов с помощью pytest/: readme.md
Функции-генераторы (yield)/: README.md  задача.md  задача.py
параметризация/: readme.md
самостоятельная практика/: задача 1.py  задача 4.py  задача 6.py
самостоятельная практика/Включения и генераторы/: task_1.py  task_2.py  task_3.py  test_3.py  ревью.py
самостоятельная практика/Тестирование Pytest/: задача 2.py  задача 3.py  задача 5.py
